Boost z-index to make sure header is never overlapped

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ header {
 		rgba(8, 8, 16, 0.4) 100%
 	);
 	backdrop-filter: blur(1rem);
-	z-index: 2;
+	z-index: 12;
 }
 
 .logo {
@@ -386,7 +386,7 @@ nav > ul > .active > a {
 		top: -3.25rem;
 		margin-right: 0.8rem;
 		background-color: #efeff8;
-		z-index: 1;
+		z-index: 11;
 	}
 
 	.burger-toggle ~ .burger-icon {
@@ -408,7 +408,7 @@ nav > ul > .active > a {
 		right: 1.05rem;
 		cursor: pointer;
 		opacity: 0;
-		z-index: 2;
+		z-index: 12;
 	}
 
 	header > nav > ul {
@@ -1008,7 +1008,7 @@ footer > div > h3 {
 		rgba(8, 8, 16, 1) 0%,
 		rgba(8, 8, 16, 0) 100%
 	);
-	z-index: 0;
+	z-index: 1;
 }
 
 #assets > .description {
@@ -1020,7 +1020,7 @@ footer > div > h3 {
 	text-align: right;
 	border-right: 6px solid #efeff8;
 	padding-right: 1rem;
-	z-index: 1;
+	z-index: 2;
 }
 
 #assets > .description > .labelled-button {
